# AndroidOTV

./: .gitignore  README.md  gradle.properties  import-summary.txt  settings.gradle
app/: build.gradle
app/src/androidTest/java/gullp/androidotv/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/otv/include/: logdef.h  otv.h
app/src/main/cpp/otv/src/: main.cpp  utils.cpp  writer.cpp
app/src/main/java/gullp/androidotv/: MainActivity.java  OTVCallback.java  OTVThread.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/gullp/androidotv/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
utils/: opencv_builder.sh  test_automator.sh
